# communicator_profiler

./: .gitignore  CMakeLists.txt  Calls.R  Makefile  README.org  Readme.org  algorithm.org  collectives_wrappers.cpp  commprof.c  commprof.cpp  commprof.h  commprofConfig.h  commprofConfig.h.in  communicator_profiler.patch  create_db.cpp  create_db.h  extern_c_wrapper.py  mpisee_gromacs256.db  neighbor_wrappers.cpp  old_Makefile  onesided_wrappers.cpp  outputformat.org  parse_xml.py  pt2pt_wrappers.cpp  sizes.txt  symbols.h  test_tree.c  utils.c  utils.cpp  utils.h  utils.h.in
Documentation/: MCPT.html  MCPT.org  Paper.org  bibliography.bib  code.inc  setup.conf
datastructlib/: CmakeLists.txt  Makefile  arith.c  arith.h  assert.c  assert.h  atom.c  atom.h  except.c  except.h  list.c  list.h  main.c  mem.h  memchk.c  old_Makfile  queue.c  queue.h  stack.c  stack.h  table.c  table.h  test.c
ipm_profiles/: lammps_64procs.xml  vardas.1633004458.459511.ipm.xml
ipm_profiles/gmx_mpi_256_vardas.1634328097.217175.ipm.xml_ipm_1518278/: dev.html  exec.html  hostlist.html  index.html  task_data
ipm_profiles/gmx_mpi_256_vardas.1634328097.217175.ipm.xml_ipm_1518278/pl/: intern_hash  intern_logrep  mem_stack_bymem  mpi_pie  mpi_stack_bymtime  mpi_stack_byrank  task_hpm  task_multi  taska_hpm  taska_multi  taskm_hpm  taskm_multi  time_stack_bymtime  time_stack_byrank
ipm_profiles/lmp_mpi_64_vardas.1634339201.97788.ipm.xml_ipm_1518280/: env.html  hostlist.html  index.html  map_calls.txt  task_data
ipm_profiles/lmp_mpi_64_vardas.1634339201.97788.ipm.xml_ipm_1518280/pl/: intern_hash  intern_logrep  mem_stack_bymem  mpi_pie  mpi_stack_bymtime  mpi_stack_byrank  task_hpm  task_multi  taska_hpm  taska_multi  taskm_hpm  taskm_multi  time_stack_bymtime  time_stack_byrank
mpisee-through/: mpisee-through-db.py  mpisee-through.py  mpisee_gromacs256.db  mpisee_profile_15682.csv
parsers/: parse_mpiP.py  parse_xml.py
profiles/: AvgMsgSize.R  Bytes_xchange.R  Calls.R  Gromacs_64procs.csv  Timings.R  eigenexa_128procs.csv  gromacs_256procs.csv  gromacs_64procs.csv  lammps_1024procs.csv  lammps_256procs.csv  lammps_64procs.csv  splatt_128procs_med4tns_v2.csv  splatt_128procs_med5tns.csv  splatt_128procs_med5tns_v2.csv  splatt_128procs_med5tns_v3.csv  splatt_256procs_med5tns.csv  trilinos_epetra_64procs.csv
test/: CMakeLists.txt  Makefile  Makefile_old  allg_rand_data.cpp  alltoallv.cpp  barrier.c  bcast_calls.c  bcast_mt.cpp  bcast_reduce_mt.cpp  cart_sub.c  cart_sub.cpp  comm_create.cpp  comm_dup.cpp  comm_free.cpp  comm_group.c  comm_group.cpp  comm_split.c  comm_split.cpp  comm_split_v2.c  comm_split_v2.cpp  comm_topo.c  comm_topo.cpp  compile.txt  ctest0.cpp  ctest1.cpp  ctest_input.cpp  ctest_inputv.cpp  hello_mpi.c  memcpy_test.csv  prof_headers.h  profile_tuwqsort_256procs.csv  profiler_data.csv  sendrecv.c  split_algorithm.cpp  split_problem.org  stress_split.c  stress_waitall.cpp  tuwqsort.c  wait.c  wait.cpp  (+1 more)
